tests/ui/span/issue-35987.stderr
error[E0404]: expected trait, found type parameter `Add`
  --> $DIR/issue-35987.rs:5:21
   |
LL | use std::ops::Add;
   |               --- you might have meant to refer to this trait
LL |
LL | impl<T: Clone, Add> Add for Foo<T> {
   |                ---  ^^^ not a trait
   |                |
   |                found this type parameter

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0404`.
